# embassy-stm32-tls

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  embassy-stm32-tls-prompt.md  embedded-tls-hw-crypto-prompt.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: benchmark.rs  test_vectors.rs  tls_client.rs  tls_handshake.rs
src/: cipher_suite.rs  lib.rs  provider.rs  test_buffer.rs
src/hardware/: cipher.rs  hash.rs  hkdf.rs  hmac.rs  mod.rs
