[package]
name = "embassy-stm32-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Hardware-accelerated TLS for STM32H7 via Embassy and embedded-tls"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishloa/embassy-stm32-tls"
keywords = ["embedded", "stm32", "tls", "embassy", "crypto"]
categories = ["embedded", "no-std", "cryptography"]

[dependencies]
embassy-stm32 = { version = "0.6", features = ["stm32h755zi-cm7"] }
embedded-tls = { path = "../embedded-tls-hw", default-features = false }
critical-section = "1"
digest = { version = "0.10", default-features = false }
generic-array = { version = "0.14", default-features = false }
typenum = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt", "embassy-stm32/defmt", "embedded-tls/defmt"]

[dev-dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-net = { version = "0.7", features = ["tcp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.4" }
embedded-io-async = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
static_cell = "2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
generic-array = { version = "0.14", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
